# postiz-setup-wizard

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup-env.sh
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: bootstrap.rs  diagnostics.rs  docker.rs  env_file.rs  import.rs  install.rs  mod.rs  resume.rs  secrets.rs  snapshot.rs  transfer.rs  tunnel.rs  updater.rs  upgrade.rs  web_link.rs
src-tauri/src/templates/: docker-compose.yml
src/components/: ExportCloneDialog.tsx  ImportClonePanel.tsx
src/components/providers/: registry.ts
src/components/ui/: Button.tsx  Card.tsx  CollapsiblePanel.tsx  CopyField.tsx  Input.tsx  InstallTimeline.tsx  LogViewer.tsx  Spinner.tsx  StatusIndicator.tsx  Toast.tsx
src/components/wizard/: NavigationButtons.tsx  StepIndicator.tsx  WizardLayout.tsx
src/hooks/: useHealthMonitor.ts
src/lib/: errors.ts  tauri.ts
src/screens/: ConnectProviders.tsx  CreateAccount.tsx  CreateWebLink.tsx  InstallPostiz.tsx  PrepareComputer.tsx  RecoveryCenter.tsx  SetupComplete.tsx  StatusDashboard.tsx  VerifyFinish.tsx
src/store/: wizardStore.ts
