[package]
name = "postiz-setup-wizard"
version = "0.3.4"
description = "Postiz Setup Wizard"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
age = { version = "0.11", features = ["armor"] }
hostname = "0.4"
scopeguard = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
